# Barcode-Service

./: .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker_build_development.yml  docker_build_latest.yml  flake8.yml  python checks.yml
app/: main.py
app/api/: api_router.py  aztecode.py  barcode.py  datamatrix.py  qrcode.py
app/schemes/: aztecode.py  barcode.py  datamatrix.py  qrcode.py
deployment/docker-compose/: docker-compose.yml
deployment/kubernetes/: 000-values.yaml  001-deployment.yaml
routers/: aztecode_gen.py  barcode_gen.py  datamatrix_gen.py  qrcode_gen.py
