[tool.poetry]
name = "barcode-service"
version = "0.1.3"
description = "Simple and small python service designed to generate and read Barcode, QRCode, Aztec Code, DataMatrix."
authors = ["adrixop95 <adrixop95@me.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.1"
aiofiles = "^0.5.0"
aztec-code-generator = "^0.3"
click = "^7.1.2"
fastapi = "^0.61.1"
h11 = "^0.11.0"
Pillow = "^7.2.0"
pydantic = "^1.6.1"
pylibdmtx = "^0.1.9"
pypng = "^0.0.20"
PyQRCode = "^1.2.1"
python-barcode = "^0.13.1"
python-multipart = "^0.0.5"
pyzbar = "^0.1.8"
six = "^1.15.0"
websockets = "^8.1"
gunicorn = "^20.0.4"
httptools = "^0.1.1"
zxing = "^0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
