[tool.poetry]
name = "barcode-service"
version = "0.1.6"
description = "Simple and small python service designed to generate and read Barcode, QRCode, Aztec Code, DataMatrix."
authors = ["adrixop95 <adrixop95@me.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
aiofiles = "^23.2.1"
aztec-code-generator = "^0.11"
click = "^8.1.7"
fastapi = "^0.110.1"
h11 = "^0.14.0"
Pillow = "^10.3.0"
pydantic = "^2.7.0"
pylibdmtx = "^0.1.10"
pypng = "^0.20220715.0 "
PyQRCode = "^1.2.1"
python-barcode = "^0.15.1"
python-multipart = "^0.0.9"
pyzbar = "^0.1.9"
six = "^1.16.0"
websockets = "^12.0"
gunicorn = "^21.2.0"
httptools = "^0.6.1"
zxing = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
